# video-player

./: README.md  index.html  package-lock.json  package.json
scripts/: bundle-mpv-macos.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: mpv-aarch64-apple-darwin
src-tauri/binaries/libs/: libarchive.13.dylib  libavdevice.62.dylib  libbluray.3.dylib  libluajit-5.1.2.dylib  libmujs.dylib  libplacebo.351.dylib  libvapoursynth-script.0.dylib  libvulkan.1.dylib
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  lib.rs  models.rs  player.rs  scanner.rs
src/components/Header/: Header.css  Header.tsx
src/components/Layout/: Layout.css  Layout.tsx
src/components/Player/: Player.css  Player.tsx
src/components/Sidebar/: Sidebar.css  Sidebar.tsx
src/components/VideoDetail/: VideoDetail.css  VideoDetail.tsx
src/components/VideoGrid/: VideoGrid.css  VideoGrid.tsx
src/stores/: appStore.ts
src/types/: index.ts
