[package]
name = "video-player"
version = "0.1.0"
description = "A Custom Video Player with File Explorer"
authors = ["you"]
edition = "2021"

[lib]
name = "video_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2.5"
notify = "7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
dirs = "6"

